--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -17,76 +17,93 @@
 ;==========================================================
 
 [colors]
-background = #1111174a
-background-alt = #787c99
-foreground = #D9E0EE
-primary = #68b3de
-secondary = #25aac2T
-alert = #a6333f
-disabled = #a9b1d6
+background = #CC131419
+foreground = #e6e6e1
+background-alt = #1C2333
+primary = #9fa7ca
+secondary = #242D41
+alert = #C69F4A
+disabled = #8e959e
+background-alt-2 	= #1a1d24
 
 [bar/mainbar]
-width = 100%
-height = 18pt
-radius = 0
-
-; dpi = 96
+width = 98%
+height = 20pt
+offset-x = 1%
+offset-y = 1%
+fixed-center = true
 
 background = ${colors.background}
 foreground = ${colors.foreground}
 
-line-size = 1pt
+; line-size = 1pt
 
-border-size = 1pt
-border-color = #00000000
+; border-size = 1pt
+; border-color = #0c0c0c
 
-padding-left = 1
-padding-right = 1
+padding-left = 2
+padding-right = 2
 
 module-margin = 1
 
-; separator = |
-; separator-foreground = ${colors.disabled}
+separator = •
+separator-foreground = ${colors.disabled}
 
-font-0 = "Roboto Mono Nerd Font:size=11;4"
-font-1 = "Weather Icons:size=11;4"
-font-2 = "Font Awesone:size=11;4"
-font-3 = "Inter:size=10;4"
+font-0 = "MonoLisa Nerd Font:size=11;2"
+; font-1 = "Weather Icons:size=11;2"
 
-modules-left = xworkspaces kernel package-updates package-updates-trigger xwindow
-modules-right = spotify openweathermap filesystem pulseaudio xkeyboard memory cpu date
+modules-left = kernel package-updates cpu memory filesystem
+modules-center = xworkspaces
+modules-right = spotify xkeyboard pulseaudio date
 
 cursor-click = pointer
-cursor-scroll = ns-resize
+; cursor-scroll = ns-resize
 
 enable-ipc = true
 
-tray-position = right
+; tray-position = right
 
-; wm-restack = generic
-; wm-restack = bspwm
 wm-restack = i3
+override-redirect = true
+; scroll-up = i3wm-wsnext
+; scroll-down = i3wm-wsprev
 
-; override-redirect = true
+; [module/xworkspaces]
+; type = internal/xworkspaces
+
+; label-active = %name%
+; label-active-background = ${colors.background-alt}
+; label-active-underline= ${colors.primary}
+; label-active-padding = 1
+
+; label-occupied = %name%
+; label-occupied-padding = 1
+
+; label-urgent = %name%
+; label-urgent-background = ${colors.alert}
+; label-urgent-padding = 1
+
+; label-empty = %name%
+; label-empty-foreground = ${colors.disabled}
+; label-empty-padding = 1
 
 [module/xworkspaces]
 type = internal/xworkspaces
 
-label-active = %name%
-label-active-background = ${colors.background-alt}
-label-active-underline= ${colors.primary}
-label-active-padding = 1
+enable-click = true
+enable-scroll = true
+icon-default = ●
+label-monitor =
+format = " <label-state> "
 
-label-occupied = %name%
-label-occupied-padding = 1
-
-label-urgent = %name%
-label-urgent-background = ${colors.alert}
-label-urgent-padding = 1
-
-label-empty = %name%
+label-active = %icon%%{O5}
+label-active-foreground = ${colors.foreground}
+label-occupied = %icon%%{O5}
+label-occupied-foreground = ${colors.secondary}
+label-urgent = %icon%%{O5}
+label-urgent-foreground = ${colors.alert}
+label-empty = %icon%%{O5}
 label-empty-foreground = ${colors.disabled}
-label-empty-padding = 1
 
 [module/xwindow]
 type = internal/xwindow
@@ -95,12 +112,7 @@ label = %title:0:60:...%
 [module/filesystem]
 type = internal/fs
 interval = 25
-
 mount-0 = /
-
-label-mounted = %{F#F0C674}%{F-} %percentage_used%%
-label-unmounted = %mountpoint% not mounted
-label-unmounted-foreground = ${colors.disabled}
 
 [module/kernel]
 type = custom/script
@@ -108,55 +120,72 @@ exec = uname -r | cut -d '-' -f1
 format-prefix = " "
 format-prefix-foreground = ${colors.primary}
 
+; [module/pulseaudio]
+; format-volume-prefix-foreground = ${colors.foreground}
+; format-volume = <ramp-volume> <label-volume>
+; label-volume = %percentage%%
+; label-muted = " "
+; label-muted-foreground = ${colors.disabled}
+
 [module/pulseaudio]
 type = internal/pulseaudio
+; Sink to be used, if it exists (find using `pacmd list-sinks`, name field)
+; If not, uses default sink
+sink = alsa_output.pci-0000_12_00.3.analog-stereo
 
-format-volume-prefix = "墳 "
-format-volume-prefix-foreground = ${colors.foreground}
-format-volume = <label-volume>
+use-ui-max = true
+interval = 5
 
-label-volume = %percentage%%
-
-label-muted = " "
-label-muted-foreground = ${colors.disabled}
+; Only applies if <ramp-volume> is used
+format-volume = <ramp-volume> <label-volume>
+ramp-volume-0 = "奔"
+ramp-volume-1 = "墳"
+ramp-volume-2 = ""
+label-muted = ""
+label-foreground = ${colors.disabled}
+click-right = pavucontrol
 
 [module/xkeyboard]
 type = internal/xkeyboard
 blacklist-0 = num lock
-format-prefix = "  "
+format-prefix = " "
 label-layout = %layout%
-label-layout-foreground = ${colors.primary}
-
-label-indicator-padding = 2
+label-indicator-padding = 1
 label-indicator-margin = 1
 label-indicator-foreground = ${colors.background}
 label-indicator-background = ${colors.secondary}
 
 [module/memory]
 type = internal/memory
-interval = 2
-format-prefix = " "
+interval = 1
+format-prefix = ""
 format-prefix-foreground = ${colors.primary}
-label = %percentage_used:2%%
+label = %gb_used%
 
 [module/cpu]
 type = internal/cpu
-interval = 2
-format-prefix = " "
+interval = 1
+format-prefix = ""
 format-prefix-foreground = ${colors.primary}
-label = %percentage:2%%
+label = %percentage%%
 
-[module/openweathermap]
-type = custom/script
-exec = /home/o/.config/polybar/scripts/openweathermap.sh
-interval = 600
-label-font = 2
+; [module/openweathermap]
+; type = custom/script
+; exec = /home/o/.config/polybar/scripts/openweathermap.sh
+; interval = 600
+; label-font = 2
 
 [module/package-updates]
 type = custom/script
 format-prefix-foreground = ${colors.primary}
 exec = /home/o/.config/polybar/scripts/package-updates.sh
 interval = 600
+
+[module/netip]
+type = custom/script
+exec = /home/o/.config/polybar/scripts/get-loc-by-ip.sh
+interval = 300
+format-prefix-foreground = ${colors.primary}
 
 ; [network-base]
 ; type = internal/network
@@ -178,26 +207,20 @@ interval = 600
 [module/spotify]
 type = custom/script
 interval = 1
-format-prefix = " "
+label-font = 0
 format = <label>
-exec = python ~/.config/polybar/scripts/spotify_status.py -f '{artist}: {song}'
-format-underline = #1db954
-label-font = 4
+exec = python ~/.config/polybar/scripts/spotify_status.py -f '{play_pause} {artist} - {song}' -p ',契'
+
 ;control players (optional)
 click-left = playerctl --player=spotify play-pause
 click-right = playerctl --player=spotify next
 click-middle = playerctl --player=spotify previous
 
-
-
 [module/date]
 type = internal/date
-interval = 1
-
-date = %Y-%m-%d %H:%M:%S
-label = %date%
-format-prefix = " "
-label-foreground = ${colors.primary}
+interval = 1.0
+date = %a %d %b %Y %H:%M
+; label-foreground = ${colors.primary}
 
 [settings]
 screenchange-reload = true
