--- a/.config/i3/config
+++ b/.config/i3/config
@@ -13,7 +13,7 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:Iosevka Extended 10
+font pango:MonoLisa Nerd Font 10
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -62,11 +62,7 @@ bindsym $mod+d exec rofi -show run
 
 # change focus
 bindsym $mod+j focus left
-bindsym $mod+k focus down
-bindsym $mod+l focus up
-bindsym $mod+semicolon focus right
-
-# alternatively, you can use the cursor keys:
+bindsym $mod+k focus down9fa7ca
 bindsym $mod+Left focus left
 bindsym $mod+Down focus down
 bindsym $mod+Up focus up
@@ -81,9 +77,7 @@ bindsym $mod+Shift+semicolon move right
 # alternatively, you can use the cursor keys:
 bindsym $mod+Shift+Left move left
 bindsym $mod+Shift+Down move down
-bindsym $mod+Shift+Up move up
-bindsym $mod+Shift+Right move right
-
+bindsym $mod+Shift+Up move up9fa7ca
 # split in horizontal orientation
 bindsym $mod+h split h
 
@@ -95,10 +89,7 @@ bindsym $mod+f fullscreen toggle
 
 # change container layout (stacked, tabbed, toggle split)
 bindsym $mod+s layout stacking
-bindsym $mod+w layout tabbed
-bindsym $mod+e layout toggle split
-
-# toggle tiling / floating
+bindsym $mod+w layout tabbed9fa7ca
 bindsym $mod+Shift+space floating toggle
 
 # change focus between tiling / floating windows
@@ -154,10 +145,6 @@ bindsym $mod+Shift+r restart
 # exit i3 (logs you out of your X session)
 bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
 
-# Add gaps
-gaps inner 8
-gaps outer 8
-
 # resize window (you can also use the mouse for that)
 mode "resize" {
         # These bindings trigger as soon as you enter the resize mode
@@ -195,19 +182,24 @@ bindsym $mod+r mode "resize"
 # }
 
 # Colors
-client.focused #ffffff #ffffff #ffffff #9fa7ca #9fa7ca
-for_window [class=".*"] border pixel 0
+client.focused #e6e6e1 #e6e6e1 #e6e6e1 #9fa7ca #9fa7ca
+# Add gaps
+for_window [class=".*"] border pixel 1
+gaps inner 14
+gaps outer 12
+gaps top 40
 
 # Display Wallpaper
-exec_always feh --bg-fill /home/o/Pictures/romb.png
+exec_always feh --bg-fill /home/o/Downloads/dominik-mayer-demonwarrior-full.jpg
 
 # Keybinding for the screen lock
 bindsym $mod+x exec i3lock
 
 # Assign programs to spaces
 # for_window [class="firefox"] move to workspace $ws2
-# for_window [class="Spotify"] move to workspace $ws3
-# for_window [class="code-oss"] move to workspace $ws2
+for_window [class="Spotify"] move to workspace $ws3
+for_window [class="code-oss"] move to workspace $ws2
+for_window [class="discord"] move to workspace $ws4
 
 # Window Compositor
 exec_always picom -f
@@ -220,4 +212,14 @@ exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 
 # Display resolution
 exec_always xrandr --output DP-0 --mode 2560x1440 --rate 165.00
+
+# Keyboard
+exec_always setxkbmap -layout us,gb,ru -option 'grp:alt_ctrl_toggle'
+
+# tresorit and some other apps
+# exec_always /home/o/.tresorit/tresorit --hidden
+# exec_always /usr/bin/spotify --minimized
+# exec_always /usr/bin/discord
+
+
 
