--- a/.config/i3/config
+++ b/.config/i3/config
@@ -13,7 +13,7 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:MonoLisa Nerd Font 10
+font pango:Berkeley Mono 8
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -44,15 +44,18 @@ bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOU
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
 
+# move tiling windows via drag & drop by left-clicking into the title bar,
+# or left-clicking anywhere into the window while holding the floating modifier.
+tiling_drag modifier titlebar
+
 # start a terminal
-bindsym $mod+Return exec kitty
+bindsym $mod+Return exec alacritty
 
 # kill focused window
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-# bindsym $mod+d exec --no-startup-id dmenu_run
-bindsym $mod+d exec rofi -show run
+bindsym $mod+d exec rofi -show drun -columns 3
 
 # A more modern dmenu replacement is rofi:
 # bindcode $mod+40 exec "rofi -modi drun,run -show drun"
@@ -62,7 +65,11 @@ bindsym $mod+d exec rofi -show run
 
 # change focus
 bindsym $mod+j focus left
-bindsym $mod+k focus down9fa7ca
+bindsym $mod+k focus down
+bindsym $mod+l focus up
+bindsym $mod+semicolon focus right
+
+# alternatively, you can use the cursor keys:
 bindsym $mod+Left focus left
 bindsym $mod+Down focus down
 bindsym $mod+Up focus up
@@ -77,7 +84,9 @@ bindsym $mod+Shift+semicolon move right
 # alternatively, you can use the cursor keys:
 bindsym $mod+Shift+Left move left
 bindsym $mod+Shift+Down move down
-bindsym $mod+Shift+Up move up9fa7ca
+bindsym $mod+Shift+Up move up
+bindsym $mod+Shift+Right move right
+
 # split in horizontal orientation
 bindsym $mod+h split h
 
@@ -89,7 +98,10 @@ bindsym $mod+f fullscreen toggle
 
 # change container layout (stacked, tabbed, toggle split)
 bindsym $mod+s layout stacking
-bindsym $mod+w layout tabbed9fa7ca
+bindsym $mod+w layout tabbed
+bindsym $mod+e layout toggle split
+
+# toggle tiling / floating
 bindsym $mod+Shift+space floating toggle
 
 # change focus between tiling / floating windows
@@ -175,51 +187,43 @@ bindsym $mod+r mode "resize"
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 # bar {
-#       status_command i3status -c /home/o/.config/i3status/i3status.conf
-# 	i3bar_command i3bar --transparency
-# 	tray_output none
-# 	font pango: Roboto Mono 11
+#         status_command i3status
 # }
+
+# monitor settings
+# bindsym $mod+n exec xrandr --ouhhhjjzztput DP0 --mode 2560x1440 --rate 144
 
 # Colors
 client.focused #e6e6e1 #e6e6e1 #e6e6e1 #9fa7ca #9fa7ca
+
 # Add gaps
 for_window [class=".*"] border pixel 1
-gaps inner 14
-gaps outer 12
-gaps top 40
+gaps inner 10
+gaps outer 10
+gaps top 10
 
-# Display Wallpaper
-exec_always feh --bg-fill /home/o/Downloads/dominik-mayer-demonwarrior-full.jpg
+# toggle polybar
+bindsym $mod+o exec $HOME/.config/polybar/launch.sh
+bindsym $mod+p exec killall -q polybar
 
-# Keybinding for the screen lock
-bindsym $mod+x exec i3lock
-
-# Assign programs to spaces
-# for_window [class="firefox"] move to workspace $ws2
-for_window [class="Spotify"] move to workspace $ws3
-for_window [class="code-oss"] move to workspace $ws2
-for_window [class="discord"] move to workspace $ws4
+# set wallpaper with fed
+exec_always feh --no-fehbg --bg-scale $HOME/dev/wallpapers/os/arch-black-4k.png
 
 # Window Compositor
 exec_always picom -f
+
+# Lock 
+bindsym $mod+x exec i3lock
 
 # Hide windows title bars
 default_border pixel 1
 
 # Launch Polybar
+exec_always --no-startup-id killall -q
 exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 
 # Display resolution
-exec_always xrandr --output DP-0 --mode 2560x1440 --rate 165.00
+exec_always xrandr --output DP-0 --mode 2560x1440 --rate 165
 
 # Keyboard
 exec_always setxkbmap -layout us,gb,ru -option 'grp:alt_ctrl_toggle'
-
-# tresorit and some other apps
-# exec_always /home/o/.tresorit/tresorit --hidden
-# exec_always /usr/bin/spotify --minimized
-# exec_always /usr/bin/discord
-
-
-
